Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124551

[macOS] App crashes on quit if the Quick Platform menu is open

XMLWordPrintable

    • macOS
    • 468cb035e (dev), bab177366 (6.7), 4019ec732 (tqtc/lts-6.5)

      App crashes on quit if the Quick Platform menu is open

      Sample code:

      import QtQuick
      import QtQuick.Window
      import Qt.labs.platform as Platform
      
      Window {
          visible: true
      
          Platform.Menu {
              id: menu
              Platform.MenuItem {
                  text: 'Some action'
              }
          }
      
          TapHandler {
              acceptedButtons: Qt.RightButton
              onTapped: {
                  exitAppTimer.start()
                  menu.open()
              }
          }
      
          Timer {
              id: exitAppTimer
              interval: 5000
              onTriggered: Qt.quit()
          }
      }
      

      Steps to reproduce:
      1. Click right mouse button, so menu is open
      2. Quit the app (e.g. Cmd + Q on macOS), or just wait for 5 secs

        For Gerrit Dashboard: QTBUG-124551
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            studiosus Vladimir Belyavsky
            Votes:
            3 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes